01-swagger-ui.yaml
kind: Service
apiVersion: v1
metadata:
  name: swagger-ui
  namespace: kube-system
spec:
  selector:
    app: swagger-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
  namespace: kube-system
  labels:
    app: swagger-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
      - name: swagger-ui
        image: swaggerapi/swagger-ui
        ports:
        - containerPort: 8080
