03-traefik-vpn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swagger-ui-ingress
  namespace: kube-system
  annotations:
    k8s.swagger-ui.cn/displayName: swagger-ui
    k8s.swagger-ui.cn/workload: swagger-ui
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
  - host: swagger-ui.internal-devops.development.npool.top
    http:
      paths:
      - path: /
        backend:
          serviceName: swagger-ui
          servicePort: 8080
